[package]
name = "traceback"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tommy-ASD/utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
chrono = { version = "0.4.26", features = ["serde"] }
paste = { version = "0.1.0", package = "unique-paste" }
