[package]
name = "traceback-error"
version = "0.1.4"
edition = "2018"
rust-version = "1.31"
license = "MIT OR Apache-2.0"
categories = ["development-tools"]
repository = "https://github.com/Tommy-ASD/traceback-error"
description = "This crate aims to make error handling and tracing easier."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
chrono = { version = "0.4.26", features = ["serde"] }
paste = { version = "0.1.0", package = "unique-paste" }
